[package]
name = "str0m-bench"
version = "0.1.0"
edition = "2021"

[features]
allocations = []

[dependencies]
str0m = { git = "https://github.com/algesten/str0m", rev = "ff331bd958bb91ad6d189e5aa32e550883c8b036", features = ["_internal_test_exports"] }

[dev-dependencies]
fastrand = "2.0.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
pcap-file = "2.0.0"
# criterion = "0.5"
divan = "0.1.11"

[[bench]]
name = "bench0"
harness = false
